force-app/main/default/objects/Feedback_360__c/Feedback_360__c.object-meta.xml
<CustomObject>
    <label>Feedback 360º</label>
    <nameField>
        <label>Assunto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedbacks 360º</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>