force-app/main/default/objects/Feedback_360__c/fields/Atribuido__c.field-meta.xml
<CustomField>
    <fullName>Atribuido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atribuído a</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feedbacks 360º (Contato)</relationshipLabel>
    <relationshipName>Feedbacks_3602</relationshipName>
    <type>Lookup</type>
</CustomField>