force-app/main/default/objects/Feedback_360__c/fields/Custo_aproximado_da_sua_sugest_o__c.field-meta.xml
<CustomField>
    <fullName>Custo_aproximado_da_sua_sugest_o__c</fullName>
    <description>Para implementar essa nova ideia haverá custos?
insira a perspectiva de gastos com sua ideia.</description>
    <inlineHelpText>Para implementar essa nova ideia haverá custos?
insira a perspectiva de gastos com sua ideia.</inlineHelpText>
    <label>Custo aproximado da sua sugestão:</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>