force-app/main/default/objects/Feedback_360__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <inlineHelpText>Selecione o departamento que vai resolver sua demanda. Em caso do Cooperar, selecione RH.</inlineHelpText>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desenvolvimento</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>T.I</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>