force-app/main/default/objects/Feedback_360__c/fields/Departamento_solicitante__c.field-meta.xml
<CustomField>
    <fullName>Departamento_solicitante__c</fullName>
    <formula>TEXT(CreatedBy.Departamento3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento solicitante</label>
    <type>Text</type>
</CustomField>