force-app/main/default/objects/Feedback_360__c/fields/Descri_o_da_sua_ideia__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_da_sua_ideia__c</fullName>
    <inlineHelpText>Fale sobre sua ideia. Descreva o que precisamos fazer, construir, comprar ...</inlineHelpText>
    <label>Descrição da sua ideia</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>