force-app/main/default/objects/Feedback_360__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Forneça a descrição completa do problema</description>
    <inlineHelpText>Detalhes a serem incluídos: Recursos, O que aconteceu, Resultado esperado, Mensagem de erro, Etapas a reproduzir.</inlineHelpText>
    <label>Descrição</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>