force-app/main/default/objects/Feedback_360__c/fields/Esta_ideia_e_sua__c.field-meta.xml
<CustomField>
    <fullName>Esta_ideia_e_sua__c</fullName>
    <label>Está ideia é sua?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>