force-app/main/default/objects/Feedback_360__c/fields/Iniciativa_da_Ideia__c.field-meta.xml
<CustomField>
    <fullName>Iniciativa_da_Ideia__c</fullName>
    <description>Co-Operar:  o colaborador poderá sugerir mudanças e se estas ideias foram boas e com baixo custo de implementação, o colaborador será premiado por isso.</description>
    <label>Iniciativa da Ideia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estrutura Física</fullName>
            </value>
            <value>
                <fullName>Gestão</fullName>
            </value>
            <value>
                <fullName>Processos</fullName>
            </value>
            <value>
                <fullName>Sistemas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>