force-app/main/default/objects/Feedback_360__c/fields/Justificativa__c.field-meta.xml
<CustomField>
    <fullName>Justificativa__c</fullName>
    <inlineHelpText>Justifique a gravidade escolhida. Usuários ou sistemas afetados etc...</inlineHelpText>
    <label>Justificativa</label>
    <type>TextArea</type>
</CustomField>