force-app/main/default/objects/Feedback_360__c/fields/Por_que_voc_acredita_que_isso_importa__c.field-meta.xml
<CustomField>
    <fullName>Por_que_voc_acredita_que_isso_importa__c</fullName>
    <description>texto do &quot;Por que você acredita que isso é importante?&quot;</description>
    <inlineHelpText>Escreva o porquê devemos implementar essa ideia. Porquê isso ajudaria a empresa.  A quem essa ideia vai ajudar a ter uma melhor produtividade.</inlineHelpText>
    <label>Por que você acredita que isso importa?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>