force-app/main/default/objects/Feedback_360__c/fields/responsavel_da_implementacaoo__c.field-meta.xml
<CustomField>
    <fullName>responsavel_da_implementacaoo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pela implementação</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>co-operar</relationshipLabel>
    <relationshipName>Feedbacks_360</relationshipName>
    <type>Lookup</type>
</CustomField>