force-app/main/default/objects/Feedback_360__c/fields/Retorno__c.field-meta.xml
<CustomField>
    <fullName>Retorno__c</fullName>
    <label>Retorno</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>