force-app/main/default/objects/Feedback_360__c/fields/Retorno_do_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Retorno_do_Usuario__c</fullName>
    <inlineHelpText>Campo destinado à resposta fornecida pelo usuário após ser questionado sobre a resolução do problema ou a necessidade de ações adicionais.</inlineHelpText>
    <label>Retorno do Usuario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONCLUIDO</fullName>
            </value>
            <value>
                <fullName>NÃO CONCLUIDO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>