force-app/main/default/objects/Feedback_360__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
                <default>true</default>
                <label>Aberto</label>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Aguardando retorno</fullName>
            </value>
            <value>
                <fullName>Fechado por inatividade</fullName>
            </value>
            <value>
                <fullName>Fila de desenvolvimento - Iniciado</fullName>
            </value>
            <value>
                <fullName>Paralisado</fullName>
            </value>
            <value>
                <fullName>Fechado</fullName>
            </value>
            <value>
                <fullName>Em analise</fullName>
                <label>Em análise</label>
            </value>
            <value>
                <fullName>Feedback negativo ao colaborador</fullName>
            </value>
            <value>
                <fullName>Implementado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>