force-app/main/default/objects/Feedback_360__c/fields/T_pico__c.field-meta.xml
<CustomField>
    <fullName>T_pico__c</fullName>
    <label>Tópico</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Departamento__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assinatura de contrato</fullName>
            </value>
            <value>
                <fullName>Assinatura de e-mail</fullName>
            </value>
            <value>
                <fullName>Casos</fullName>
            </value>
            <value>
                <fullName>Catálogo</fullName>
            </value>
            <value>
                <fullName>Compras</fullName>
            </value>
            <value>
                <fullName>Computador</fullName>
            </value>
            <value>
                <fullName>Contas</fullName>
            </value>
            <value>
                <fullName>Contratos</fullName>
            </value>
            <value>
                <fullName>Demonstrações</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Impressora</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Metas</fullName>
            </value>
            <value>
                <fullName>Oportunidades</fullName>
            </value>
            <value>
                <fullName>Ordens de Trabalho</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Pedidos</fullName>
            </value>
            <value>
                <fullName>Pendências</fullName>
            </value>
            <value>
                <fullName>Protocolos</fullName>
            </value>
            <value>
                <fullName>Qualidade</fullName>
            </value>
            <value>
                <fullName>Ramal</fullName>
            </value>
            <value>
                <fullName>Relatórios</fullName>
            </value>
            <value>
                <fullName>Reserva de Salas</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Site - Commerce</fullName>
            </value>
            <value>
                <fullName>Tarefas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>