force-app/main/default/objects/Feedback_360__c/fields/Telefone_para_contato__c.field-meta.xml
<CustomField>
    <fullName>Telefone_para_contato__c</fullName>
    <inlineHelpText>Apenas caso o departamento seja T.I.</inlineHelpText>
    <label>Telefone para contato</label>
    <type>Phone</type>
</CustomField>