force-app/main/default/objects/Feedback_360__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elogio</fullName>
            </value>
            <value>
                <fullName>BUG</fullName>
            </value>
            <value>
                <fullName>MELHORIA</fullName>
            </value>
            <value>
                <fullName>NOVO RECURSO</fullName>
            </value>
            <value>
                <fullName>Sugestão</fullName>
            </value>
            <value>
                <fullName>Reclamação</fullName>
            </value>
            <value>
                <fullName>SOLICITAÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>