force-app/main/default/objects/Feedback_360__c/fields/titular__c.field-meta.xml
<CustomField>
    <fullName>titular__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Selecione quem é o colaborador que teve a ideia. Se é sua, coloque seu contato, se não, coloque a de quem teve a ideia</inlineHelpText>
    <label>Quem teve a ideia?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feedbacks 360º (Colaborador titular da ideia)</relationshipLabel>
    <relationshipName>Feedbacks_3601</relationshipName>
    <type>Lookup</type>
</CustomField>