force-app/main/default/objects/Feedback_360__c/recordTypes/Feedback_360.recordType-meta.xml
<RecordType>
    <fullName>Feedback_360</fullName>
    <active>true</active>
    <label>Feedback 360</label>
</RecordType>