force-app/main/default/objects/Feedback_360__c/recordTypes/Projeto_Co_operar.recordType-meta.xml
<RecordType>
    <fullName>Projeto_Co_operar</fullName>
    <active>true</active>
    <label>Projeto Cooperar</label>
</RecordType>