force-app/main/default/objects/Feedback_360__c/validationRules/Gravidade_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Gravidade_1</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISNEW(),
TEXT(Gravidade__c) == &quot;Gravidade 1 - Funcionalidade principal, impacta o fluxo operacional&quot;,
TEXT(Tipo__c) != &quot;BUG&quot;
)</errorConditionFormula>
    <errorDisplayField>Tipo__c</errorDisplayField>
    <errorMessage>Solicitações de gravidade 1 devem ser apenas referentes a erros/bugs.</errorMessage>
</ValidationRule>