force-app/main/default/objects/Feedback_360__c/validationRules/Justificativa_Gravidade_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Justificativa_Gravidade_1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    TEXT(Gravidade__c) == &quot;Gravidade 1 - Funcionalidade principal, impacta o fluxo operacional&quot;,
    Justificativa__c == &apos;&apos;
)</errorConditionFormula>
    <errorMessage>Você deve fornecer uma justificativa para feedbacks de Gravidade 1.</errorMessage>
</ValidationRule>