force-app/main/default/objects/Feedback_360__c/validationRules/Telefone_p_contato.validationRule-meta.xml
<ValidationRule>
    <fullName>Telefone_p_contato</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(
TEXT(Departamento__c) = &apos;T.I&apos;,
TEXT(Departamento__c) = &apos;Marketing&apos;
),
Telefone_para_contato__c = null
)</errorConditionFormula>
    <errorDisplayField>Telefone_para_contato__c</errorDisplayField>
    <errorMessage>Preencha seu telefone para contato.</errorMessage>
</ValidationRule>