force-app/main/default/objects/Feedback_360__c/validationRules/titular_da_ideia.validationRule-meta.xml
<ValidationRule>
    <fullName>titular_da_ideia</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Esta_ideia_e_sua__c)  = &quot;Sim&quot;,  titular__c  &lt;&gt; &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>titular__c</errorDisplayField>
    <errorMessage>Este campo só deve ser preenchido caso seja uma solicitação.</errorMessage>
</ValidationRule>