force-app/main/default/objects/Feedback_360__c/validationRules/titular_da_ideia_SELECIONADO.validationRule-meta.xml
<ValidationRule>
    <fullName>titular_da_ideia_SELECIONADO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Esta_ideia_e_sua__c)  = &quot;Não&quot;,  titular__c  = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>titular__c</errorDisplayField>
    <errorMessage>Selecione quem teve a ideia</errorMessage>
</ValidationRule>