force-app/main/default/objects/Feedback_360__c/validationRules/Valida_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISNEW(),
 NOT(ISPICKVAL(Status__c, &apos;Aberto&apos;))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>O Status deve ser Aberto.</errorMessage>
</ValidationRule>