force-app/main/default/objects/Feedback_360__c/listViews/Aberto_Desenvolvimento.listView-meta.xml
<ListView>
    <fullName>Aberto_Desenvolvimento</fullName>
    <columns>N_do_Feedback__c</columns>
    <columns>Gravidade__c</columns>
    <columns>Departamento__c</columns>
    <columns>Tipo__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>T.I</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Feedback_360__c.Projeto_Co_operar</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Aberto</value>
    </filters>
    <label>Abertos T.I.</label>
</ListView>