force-app/main/default/objects/Feedback_360__c/listViews/Abertos.listView-meta.xml
<ListView>
    <fullName>Abertos</fullName>
    <columns>N_do_Feedback__c</columns>
    <columns>Gravidade__c</columns>
    <columns>Descricao__c</columns>
    <columns>Departamento__c</columns>
    <columns>T_pico__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Desenvolvimento</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Feedback_360__c.Feedback_360</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Fechado,Implementado</value>
    </filters>
    <label>1 - Abertos Desenvolvimento</label>
</ListView>