force-app/main/default/objects/Feedback_360__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>N_do_Feedback__c</columns>
    <columns>Gravidade__c</columns>
    <columns>T_pico__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Departamento__c</columns>
    <columns>Departamento_solicitante__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Desenvolvimento</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Maria Eduarda</value>
    </filters>
    <label>Tudo</label>
</ListView>