force-app/main/default/objects/Feedback_360__c/listViews/C_pia_de_PROJETO_CO_OPERAR.listView-meta.xml
<ListView>
    <fullName>C_pia_de_PROJETO_CO_OPERAR</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Custo_aproximado_da_sua_sugest_o__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Feedback_360__c.Projeto_Co_operar</value>
    </filters>
    <label>Cópia de PROJETO CO-OPERAR</label>
</ListView>