force-app/main/default/objects/Feedback_360__c/listViews/Em_andamento.listView-meta.xml
<ListView>
    <fullName>Em_andamento</fullName>
    <columns>N_do_Feedback__c</columns>
    <columns>Gravidade__c</columns>
    <columns>T_pico__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Desenvolvimento</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Em andamento</value>
    </filters>
    <label>2 - Em andamento</label>
</ListView>