force-app/main/default/objects/Feedback_360__c/listViews/FECHADO_POR_INATIVIDADE.listView-meta.xml
<ListView>
    <fullName>FECHADO_POR_INATIVIDADE</fullName>
    <columns>N_do_Feedback__c</columns>
    <columns>NAME</columns>
    <columns>Gravidade__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Fechado por inatividade</value>
    </filters>
    <label>4 - Fechado por inatividade</label>
</ListView>