force-app/main/default/objects/Feedback_360__c/listViews/Fechados.listView-meta.xml
<ListView>
    <fullName>Fechados</fullName>
    <columns>N_do_Feedback__c</columns>
    <columns>Gravidade__c</columns>
    <columns>T_pico__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Fechado</value>
    </filters>
    <label>6 - Fechados</label>
</ListView>