force-app/main/default/objects/Feedback_360__c/listViews/Fila_de_desenvolvimento.listView-meta.xml
<ListView>
    <fullName>Fila_de_desenvolvimento</fullName>
    <columns>N_do_Feedback__c</columns>
    <columns>Gravidade__c</columns>
    <columns>T_pico__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Fila de desenvolvimento - Iniciado</value>
    </filters>
    <label>5 - Fila de desenvolvimento</label>
</ListView>