force-app/main/default/objects/Feedback_360__c/listViews/PROJETO_COOPERAR.listView-meta.xml
<ListView>
    <fullName>PROJETO_COOPERAR</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Custo_aproximado_da_sua_sugest_o__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Feedback_360__c.Projeto_Co_operar</value>
    </filters>
    <filters>
        <field>Esta_ideia_e_sua__c</field>
        <operation>equals</operation>
        <value>Sim</value>
    </filters>
    <label>PROJETO CO-OPERAR</label>
</ListView>