force-app/main/default/objects/Feedback_360__c/listViews/X3_Aguardando_retorno.listView-meta.xml
<ListView>
    <fullName>X3_Aguardando_retorno</fullName>
    <columns>N_do_Feedback__c</columns>
    <columns>Gravidade__c</columns>
    <columns>T_pico__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Aguardando retorno</value>
    </filters>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Desenvolvimento</value>
    </filters>
    <label>3 - Aguardando retorno</label>
</ListView>